--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-   <div class="container">
-
-   </div> 
+    <div class="header">
+        <h3>ETCH-A-SKETCH</h3>
+        <button id="btn">Change grid size</button>
+    </div>
+   <div class="container"></div> 
    <script src = "javascript.js"></script>
 </body>
 </html>
