--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 <body>
     <div class="header">
         <h3>ETCH-A-SKETCH</h3>
-        <button id="btn">Change grid size</button>
+        <div class="options">
+            <button id="gridSize">Change grid size</button>
+            <button id="clear">Clear</button>
+        </div>
     </div>
    <div class="container"></div> 
-   <script src = "javascript.js"></script>
+   <div class="modes">
+    <button id="rainbow">Rainbow mode</button>
+    <button id="darken">Gradient mode</button>
+    <script src = "javascript.js"></script>
+   </div>
 </body>
 </html>
