Make rainbow mode functional, add clear button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </div>
    <div class="container"></div> 
    <div class="modes">
+    <button id="default">Default</button>
     <button id="rainbow">Rainbow mode</button>
     <button id="darken">Gradient mode</button>
-    <script src = "javascript.js"></script>
+    <script src="javascript.js"></script>
    </div>
 </body>
 </html>
