--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <div class="header">
-        <h3>ETCH-A-SKETCH</h3>
-        <div class="options">
-            <button id="gridSize">Change grid size</button>
-            <button id="clear">Clear</button>
+        <h2>ETCH-A-SKETCH</h2> 
+        <div class="modes">
+         <button id="default">Default mode</button>
+         <button id="rainbow">Rainbow mode</button>
+         <button id="darken">Gradient mode</button>
         </div>
     </div>
-   <div class="container"></div> 
-   <div class="modes">
-    <button id="default">Default</button>
-    <button id="rainbow">Rainbow mode</button>
-    <button id="darken">Gradient mode</button>
+   <div class="container"></div>
+   <div class="options">
+        <button id="gridSize">Change grid size</button>
+        <button id="clear">Clear</button>
+    </div>
     <script src="javascript.js"></script>
-   </div>
 </body>
 </html>
