Add style to mode buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <h2>ETCH-A-SKETCH</h2> 
         <div class="modes">
-         <button id="default">Default mode</button>
-         <button id="rainbow">Rainbow mode</button>
-         <button id="darken">Gradient mode</button>
+         <button class = "mode" id="default">Default mode</button>
+         <button class ="mode" id="rainbow">Rainbow mode</button>
+         <button class ="mode" id="darken">Gradient mode</button>
         </div>
     </div>
    <div class="container"></div>
