Add conditions for gridSize

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class="header">
         <h2>ETCH-A-SKETCH</h2> 
         <div class="modes">
-         <button class = "mode" id="default">Default mode</button>
+         <button class ="mode" id="default">Default mode</button>
          <button class ="mode" id="rainbow">Rainbow mode</button>
          <button class ="mode" id="darken">Gradient mode</button>
         </div>
+        <div class="options">
+             <button class="option" id="gridSize">Change grid size</button>
+             <button class="option" id="clear">Clear</button>
+         </div>
     </div>
    <div class="container"></div>
-   <div class="options">
-        <button id="gridSize">Change grid size</button>
-        <button id="clear">Clear</button>
-    </div>
     <script src="javascript.js"></script>
 </body>
 </html>
