--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
          </div>
     </div>
    <div class="container"></div>
+   <div class="footer">Made by <a href="https://github.com/BonkersCoding">BonkersCoding</a> </div>
     <script src="javascript.js"></script>
 </body>
 </html>
